--- a/Optional_Peer_Graded_Assignment.jupyterlite.ipynb
+++ b/Optional_Peer_Graded_Assignment.jupyterlite.ipynb
@@ -228,9 +228,22 @@
       "execution_count": 21
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": "We can see a small positive correlation.",
-      "metadata": {}
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
